--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "travel_advisor",
   "version": "0.1.0",
+  "homepage": "http://shubhamispandey.github.io/React-Travel-Advisory",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
